Bug 145128 - Setting the "PerformFileCheckExt" setting via the Windows Registry does not work correctly: Final is not applied
Summary: Setting the "PerformFileCheckExt" setting via the Windows Registry does not w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.1.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-14 12:05 UTC by nils.voss
Modified: 2023-10-11 15:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example extension to turn off and lock the setting (1.41 KB, application/zip)
2021-11-01 17:53 UTC, Gabor Kelemen (Collabora)
Details
The dialog with the proposed patch and the example extension (28.64 KB, image/png)
2021-11-02 11:51 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nils.voss 2021-10-14 12:05:53 UTC
Description:
I tried to set the option "PerformFileExtCheck" via the appropriate registry values (Computer\HKEY_LOCAL_MACHINE\SOFTWARE\Policies\LibreOffice\org.openoffice.Office.Common\Misc\PerformFileExtCheck, PerformFileExtCheck = false, Final =1). This is also accepted but the finalization does not work. The option is still shown to the user as modifiable. If the user sets this option and closes the settings LibreOffice crashes.

Steps to Reproduce:
1. set registry values
2. go to the options and see that the option is not grayed out.

Actual Results:
The option is changeable for the user. LibreOffice crashes.

Expected Results:
The option is no longer changeable for the user.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2021-11-01 17:53:58 UTC
Created attachment 176065 [details]
Example extension to turn off and lock the setting

Confirming with:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e06ba31a037ea3ff192c9a00db6152179eb298a6
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Installing attached example extension turns off the "Perform check" checkbox, but does not disable it as the finalize property should.
Comment 2 Gabor Kelemen (Collabora) 2021-11-02 11:51:27 UTC
Created attachment 176078 [details]
The dialog with the proposed patch and the example extension

Proposed patch: https://gerrit.libreoffice.org/c/core/+/124567
Comment 3 Commit Notification 2021-11-08 08:46:18 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a2f0d457c8addeeef768a93f6a174617094a0254

tdf#145128 "Perform file extension check" should be disabled if finalized

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 nils.voss 2021-11-10 08:11:39 UTC
I have tested version 7.3 Dev and the "Final" setting is successfully applied. Is it possible to apply this patch already in a 7.2.x version?
Comment 5 Commit Notification 2021-11-15 11:42:21 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c9bfb849aef0de759edcd5f3137ff07d913a1cf5

tdf#145128 "Perform file extension check" should be disabled if finalized

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard