tdf#145128 "Perform file extension check" should be disabled if finalized

Change-Id: I7181ab8dde28fd5580a90fb267b31eaffd6a9878